--- a/src/style/generel.css
+++ b/src/style/generel.css
@@ -38,6 +38,7 @@ body {
 background-color: rgb(238, 238, 238);
   margin: 0;
   padding: 0;
+  background-image: url(../imgs/dotted-pattern.png);
 }
 
 
